fixed scrollbar that repositions page fixes issue #19

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     margin: 0px;
     background-color: #2f2f2f;
